--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "md5": "^2.3.0",
+    "moment-timezone": "^0.5.46",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
