--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run Integration Tests
-        run: npm run test
+        run: npm run test:integration
 
   snyk-scan:
     needs: integration-tests
