--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "test:integration": "jest --testPathPattern=src/integration",
     "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -31,6 +29,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "md5": "^2.3.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "moment-timezone": "^0.5.46",
     "native-base": "^3.4.28",
     "react": "18.2.0",
@@ -47,14 +46,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-native": "^12.8.0",
+    "@types/jest": "^29.5.14",
     "@types/md5": "^2.3.5",
     "@types/react": "~18.2.45",
+    "@types/react-dom": "^18.3.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
