--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
+      - name: Check installed packages
+        run: npm list jest        
       - name: Run Integration Tests
         run: npm run test:integration
 
@@ -44,7 +46,7 @@ jobs:
       - name: Run Snyk Scan
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk test --all-projects
+        run: snyk test --all-projects --severity-threshold=high --fail-on=all
 
   deploy:
     needs: integration-tests
