--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
     "md5": "^2.3.0",
     "metro-react-native-babel-preset": "^0.77.0",
@@ -52,7 +53,7 @@
     "@types/jest": "^29.5.14",
     "@types/md5": "^2.3.5",
     "@types/react": "~18.2.45",
-    "@types/react-dom": "^18.3.1",
+    "@types/react-dom": "~18.2.25",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
