--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           node-version: '16'  # Usa Node.js 16 para evitar incompatibilidades
 
       - name: Install dependencies
-        run: npm instal
+        run: npm install
 
   notify-email:
     needs: [lint, integration-tests, deploy]  
