--- a/package.json
+++ b/package.json
@@ -14,51 +14,54 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/datetimepicker": "^8.0.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.27",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.4",
+    "expo-constants": "~17.0.2",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "^3.5.24",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "^0.29.7",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-updates": "^0.26.5",
+    "expo-web-browser": "~14.0.0",
     "md5": "^2.3.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment-timezone": "^0.5.46",
     "native-base": "^3.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.1",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-native": "^12.8.0",
     "@types/jest": "^29.5.14",
     "@types/md5": "^2.3.5",
-    "@types/react": "~18.2.45",
-    "@types/react-dom": "~18.2.25",
+    "@types/react": "~18.3.12",
+    "@types/react-dom": "~18.3.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.0",
     "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.2.5",
