--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.4",
-    "expo-constants": "~17.0.2",
+    "@stripe/stripe-react-native": "^0.38.6",
+    "expo": "~52.0.7",
+    "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-image-picker": "~16.0.1",
+    "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.2",
-    "expo-router": "^3.5.24",
+    "expo-router": "~4.0.5",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "^0.29.7",
+    "expo-splash-screen": "^0.29.10",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
-    "expo-updates": "^0.26.5",
-    "expo-web-browser": "~14.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-updates": "^0.26.7",
+    "expo-web-browser": "~14.0.1",
     "md5": "^2.3.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment-timezone": "^0.5.46",
     "native-base": "^3.4.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "^0.76.1",
+    "react-native": "^0.76.2",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
@@ -61,7 +62,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.0",
+    "jest-expo": "~52.0.1",
     "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.2.5",
