--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/splash.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.victor2.cirupied"
     },
     "web": {
       "bundler": "metro",
@@ -45,6 +46,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/21ba5e1f-84a3-4af0-a0b1-1aa8aa32d59d"
-    }
+    },
+    "owner": "victor2"
   }
 }
