--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,19 +49,62 @@ jobs:
         run: snyk test --all-projects --severity-threshold=high 
 
   deploy:
-    needs: integration-tests
     runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/master'  
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'  
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
 
       - name: Install dependencies
         run: npm install
+
+      - name: Build APK for Android
+        run: npx eas-cli build --platform android --profile preview --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}  
+
+      - name: Upload image and send data to API
+        run: |
+          # Obtener URL del artefacto
+          RESPONSE=$(eas build:list --limit=1 --status=finished --json --non-interactive)
+          DOWNLOAD_URL=$(echo "$RESPONSE" | jq -r '.[0].artifacts.buildUrl')
+
+          echo "La URL del artefacto obtenida es: $DOWNLOAD_URL"
+
+          # Verificar si la imagen existe
+          if [ ! -f "$IMAGE_PATH" ]; then
+            echo "La imagen no existe en la ruta especificada: $IMAGE_PATH"
+            exit 1
+          fi
+
+          # Obtener solo el nombre del archivo desde la ruta completa
+          IMAGE_NAME=$(basename "$IMAGE_PATH")
+          echo "El nombre del icono es: $IMAGE_NAME"
+
+          # Subir la imagen al servidor PHP
+          curl -X POST \
+            -F "imagen=@$IMAGE_PATH" \
+            "$WEB_SERVICE_URL"
+
+          # Enviar datos a la API de Express
+          curl -X POST "$API_URL" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "url": "'"$DOWNLOAD_URL"'",
+              "nombre": "'"$PROJECT_NAME"'",
+              "icono": "'"$IMAGE_NAME"'"
+            }'
+
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+          IMAGE_PATH: ".github/workflows/CirupieD2.png" 
+          WEB_SERVICE_URL: "https://labarbada.store/subirImagen.php"
+          API_URL: "https://api-admin-six.vercel.app/api/guardar-datos" 
+          PROJECT_NAME: "CirupieD"  
 
   notify-email:
     needs: [lint, integration-tests, deploy]
