--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: snyk-scan
     if: github.ref == 'refs/heads/master'  
     steps:
       - name: Checkout code
