--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "@stripe/stripe-react-native": "^0.38.6",
+    "cross-spawn": "^7.0.6",
     "expo": "~52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -28,7 +29,7 @@
     "expo-splash-screen": "^0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
-    "expo-updates": "^0.26.7",
+    "expo-updates": "^0.26.9",
     "expo-web-browser": "~14.0.1",
     "md5": "^2.3.0",
     "metro-react-native-babel-preset": "^0.77.0",
