--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: snyk-scan
-    if: github.ref == 'refs/heads/master'  
+    if: github.ref == 'refs/heads/main'  
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
