--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         run: npm install
 
       - name: Build APK for Android
-        run: npx eas-cli build --platform android --profile preview --non-interactive
+        run: eas build --platform android --profile production
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}  
 
