--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.2",
+    "expo-modules-core": "^2.0.6",
     "expo-router": "~4.0.5",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "^0.29.10",
